--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# IDEA
+.idea
+
 # Compiled class file
 *.class
 
@@ -19,5 +22,17 @@
 *.tar.gz
 *.rar
 
+target
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# front
+node
+node_modules
+package-lock.json
+yarn.lock
+yarn-error.log
+.parcel-cache
+dist
